--- a/index.html
+++ b/index.html
@@ -5,22 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JeevesGB</title>
     <link rel="stylesheet" href="assets/css/PSone.css">
-    <!-- Optional: Use a retro pixel font like Press Start 2P -->
+
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
     <style>
-        /* Additional retro styles */
+
         body {
-            font-family: 'Press Start 2P', cursive; /* Pixel font for that 90s feel */
-            background-color: #0000ff; /* Neon Blue */
-            color: #ff00ff; /* Neon Pink */
+            font-family: 'Press Start 2P', cursive; 
+            background-color: #5bb0ff; 
+            color: #db0f97; /* description */
+            font-size: 1rem;
         }
 
-        header {
-            background-color: #ff00ff;
-            color: white;
+        header { 
+            background-color: #5bb0ff;
+            color: rgb(255, 217, 0);
             padding: 10px 0;
             text-align: center;
-            font-size: 2rem;
+            font-size: 1rem; /* toolname */
         }
 
         header nav ul {
@@ -29,43 +30,46 @@
 
         header nav ul li {
             display: inline;
-            margin: 0 10px;
+            margin: 0 5px;
         }
 
         header nav ul li a {
-            color: white;
+            color: rgb(0, 225, 255);
             text-decoration: none;
         }
 
         header nav ul li a:hover {
-            color: yellow; /* Hover effect */
+            color: rgb(0, 74, 233); 
         }
 
-        h1, h2 {
-            color: #00ff00; /* Neon Green */
-            text-shadow: 2px 2px 5px rgba(0,0,0,0.5);
+        h1, h2 { 
+            color: #00ffb3; 
+            text-shadow: 1px 1px 3px rgba(0,0,0,0.5);
+            font-size: 2rem; /* title */
+            text-align: center;
         }
 
         a {
-            color: #ffff00; /* Neon Yellow */
+            color: #ffff00; 
+            font-size: 1.5rem; /* toolname */
         }
 
         a:hover {
-            color: #ff4500; /* Hover effect */
+            color: #ff4500;
         }
 
         footer {
             background-color: #ff00ff;
             color: white;
             text-align: center;
-            padding: 10px;
+            padding: 5px;
         }
 
         .retro-button {
             background-color: #ff00ff;
             color: white;
-            padding: 15px;
-            border: 2px solid #ff4500;
+            padding: 5px;
+            border: 1px solid #ff4500;
             font-family: 'Press Start 2P', sans-serif;
         }
 
@@ -75,15 +79,15 @@
         }
 
         section {
-            padding: 20px;
-            margin-top: 20px;
-            background-color: #222;
-            border-radius: 10px;
+            padding: .01rem;
+            margin-top: 5px;
+            background-color: #3d87e7;
+            border-radius: 5px;
         }
 
         /* Marquee scrolling text for extra retro flair */
         marquee {
-            font-size: 1.5rem;
+            font-size: .5rem;
             color: yellow;
             text-shadow: 2px 2px 5px rgba(0,0,0,0.5);
         }
@@ -100,7 +104,7 @@
         </nav>
     </header>
     
-    <marquee>Welcome!</marquee>
+    <marquee>Merry Christmas!</marquee>
     
     <section id="about">
         <h1>About Me</h1>
