--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
             font-family: 'Press Start 2P', cursive; 
             background-color: #5bb0ff; 
             color: #db0f97; /* description */
-            font-size: 1rem;
+            font-size: .95rem;
         }
 
         header { 
             background-color: #5bb0ff;
             color: rgb(255, 217, 0);
-            padding: 10px 0;
+            padding: 1px 0;
             text-align: center;
             font-size: 1rem; /* toolname */
         }
@@ -30,7 +30,7 @@
 
         header nav ul li {
             display: inline;
-            margin: 0 5px;
+            margin: 0 1px;
         }
 
         header nav ul li a {
@@ -46,7 +46,7 @@
             color: #00ffb3; 
             text-shadow: 1px 1px 3px rgba(0,0,0,0.5);
             font-size: 2rem; /* title */
-            text-align: center;
+            text-align: left;
         }
 
         a {
