added webtools page WIP

--- a/index.html
+++ b/index.html
@@ -170,6 +170,7 @@ footer {
     <ul>
       <li><a href="#about">ABOUT</a></li>
       <li><a href="#projects">PROJECTS</a></li>
+      <li><a href="webtools.html">Web Tools</a></li>
       <li><a href="#contact">CONTACT</a></li>
     </ul>
   </nav>
