--- a/webtools.html
+++ b/webtools.html
@@ -21,8 +21,7 @@ a:hover { color: #00ffb3; }
 <p>Browser-based tools and utilities.</p>
 
 <ul>
-  <li><a href="txt2csv.html">TXT → CSV Converter</a></li>
-  <!-- Add more tools here later -->
+  <li><a href="tools/txt2csv.html">TXT → CSV Converter</a></li>
 </ul>
 
 <p><a href="index.html">← Back to Home</a></p>
