--- a/txt2csv.html
+++ b/txt2csv.html
@@ -47,7 +47,7 @@ button {
 
 <body>
 <div class="container">
-    <h2>TXT-2-CSV (Web)</h2>
+    <h2>TXT-2-CSV</h2>
 
     <label>Select Tab:</label><br>
     <select id="tabSelect"></select>
@@ -189,5 +189,8 @@ function importCSV() {
     input.click();
 }
 </script>
+<footer>
+  © 2025 JeevesGB
+</footer>
 </body>
 </html>
