--- a/webtools.html
+++ b/webtools.html
@@ -26,5 +26,8 @@ a:hover { color: #00ffb3; }
 
 <p><a href="index.html">← Back to Home</a></p>
 
+<footer>
+  © 2025 JeevesGB
+</footer>
 </body>
 </html>
