--- a/webtools.html
+++ b/webtools.html
@@ -20,6 +20,8 @@ a:hover { color: #00ffb3; }
 <h1>Web Tools</h1>
 <p>Browser-based tools and utilities.</p>
 
+<h2>work in progress</h2>
+
 <ul>
   <li><a href="txt2csv.html">TXT → CSV Converter</a></li>
 </ul>
