added png2tga converter to webtools

--- a/txt2csv.html
+++ b/txt2csv.html
@@ -189,6 +189,7 @@ function importCSV() {
     input.click();
 }
 </script>
+<p><a href="webtools.html">← Go Back</a></p>
 <footer>
   © 2025 JeevesGB
 </footer>
