--- a/webtools.html
+++ b/webtools.html
@@ -25,6 +25,9 @@ a:hover { color: #00ffb3; }
 <ul>
   <li><a href="txt2csv.html">TXT → CSV Converter</a></li>
 </ul>
+<ul>
+  <li><a href="png2tga.html">PNG 2 TGA Converter</a></li>
+</ul>
 
 <p><a href="index.html">← Back to Home</a></p>
 
