--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 body {
   margin: 0;
-  font-family: 'Press Start 2P', cursive;
+  font-family: 'Press Start 2P', bold;
   background-color: var(--bg);
   color: var(--text);
   font-size: 0.75rem;
