--- a/index.html
+++ b/index.html
@@ -183,7 +183,8 @@ footer {
 <section id="about">
   <h1>About Me</h1>
   <p>
-    My name is Jej, I am interested in coding and game modification.
+    My name is Jej, I am interested in coding and game modification. 
+    This page is currently work in progress so changes will occur as I update and improve it.
   </p>
 </section>
 
