font adjustments to index

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 :root {
   --bg: #5bb0ff;
   --panel: #3d87e7;
-  --text: #ffffff;
+  --text: #050505;
   --accent: #00ffb3;
-  --highlight: #ffd700;
+  --highlight: #000000;
   --danger: #db0f97;
 }
 
