--- a/webtools.html
+++ b/webtools.html
@@ -7,11 +7,11 @@
 <link rel="stylesheet" href="style.css">
 <style>
 /* Inline minimal styling if not using external CSS */
-body { font-family: Arial, sans-serif; background-color: #5bb0ff; color: #fff; padding: 2rem; }
+body { font-family: Arial, sans-serif; background-color: #2d97fa; color: #020202; padding: 2rem; }
 h1 { color: #00ffb3; }
 ul { list-style: none; padding: 0; }
 li { margin: 0.5rem 0; }
-a { color: #ffd700; text-decoration: none; font-weight: bold; }
+a { color: #0c0c0a; text-decoration: none; font-weight: bold; }
 a:hover { color: #00ffb3; }
 </style>
 </head>
