music page added

--- a/music.html
+++ b/music.html
@@ -53,5 +53,12 @@
         </div>
     </div>
 
+
+
+
+<p><a href="index.html">← Go Back</a></p>
+<footer>
+  © 2025 JeevesGB
+</footer>
 </body>
 </html>
