--- a/index.html
+++ b/index.html
@@ -168,11 +168,11 @@ footer {
 <header>
   <nav>
     <ul>
-      <li><a href="#about">ABOUT</a></li>
-      <li><a href="#projects">PROJECTS</a></li>
+      <li><a href="#about">About</a></li>
+      <li><a href="#projects">Projects</a></li>
       <li><a href="webtools.html">Web Tools</a></li>
-      <li><a href="music.html"></a>Music</li>
-      <li><a href="#contact">CONTACT</a></li>
+      <li><a href="music.html">Music</a></li>
+      <li><a href="#contact">Contact</a></li>
     </ul>
   </nav>
 </header>
