--- a/music.html
+++ b/music.html
@@ -65,6 +65,12 @@
         </div>
     </div>
 
+    <div><iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/soundcloud%253Atracks%253A2227023290&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/jeevesbeats" title="JEJ" target="_blank" style="color: #cccccc; text-decoration: none;">JEJ</a> · <a href="https://soundcloud.com/jeevesbeats/innocence-bootleg" title="Innocence bootleg" target="_blank" style="color: #cccccc; text-decoration: none;">Innocence bootleg</a></div>
+    
+    <div><iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/soundcloud%253Atracks%253A2221918337&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/jeevesbeats" title="JEJ" target="_blank" style="color: #cccccc; text-decoration: none;">JEJ</a> · <a href="https://soundcloud.com/jeevesbeats/jej-let-love-die-ft-jaymuusixx" title="JEJ - Let Love Die (Ft Jaymuusixx)" target="_blank" style="color: #cccccc; text-decoration: none;">JEJ - Let Love Die (Ft Jaymuusixx)</a></div></div>
+
+</div>
+
 
 
 
