--- a/music.html
+++ b/music.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>My Webpage</title>
+    <title>Music - JeevesGB</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <style>
@@ -31,17 +31,7 @@
     </style>
 </head>
 <body>
-<header>
-  <nav>
-    <ul>
-      <li><a href="#about">About</a></li>
-      <li><a href="#projects">Projects</a></li>
-      <li><a href="webtools.html">Web Tools</a></li>
-      <li><a href="music.html">Music</a></li>
-      <li><a href="#contact">Contact</a></li>
-    </ul>
-  </nav>
-</header>
+
 
 
     <div class="container">
