--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@ footer {
   </nav>
 </header>
 
-<div class="status-bar">MERRY CHRISTMAS!</div>
+<div class="status-bar">Happy New Year!</div>
 
 <main class="container">
 
