--- a/webtools.html
+++ b/webtools.html
@@ -23,13 +23,13 @@ a:hover { color: #00ffb3; }
 <h2>work in progress</h2>
 
 <ul>
-  <li><a href="txt2csv.html">TXT → CSV Converter</a></li>
+  <li><a href="tools/txt2csv.html">TXT → CSV Converter</a></li>
 </ul>
 <ul>
-  <li><a href="png2tga.html">PNG → TGA Converter</a></li>
+  <li><a href="tools/png2tga.html">PNG → TGA Converter</a></li>
 </ul>
 <ul>
-  <li><a href="png2pdf.html">PNG → PDF Converter</a></li>
+  <li><a href="tools/png2pdf.html">PNG → PDF Converter</a></li>
 </ul>
 <p><a href="index.html">← Back to Home</a></p>
 
