using PSOne.css

--- a/index.html
+++ b/index.html
@@ -7,160 +7,7 @@
 
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Jersey+10&display=swap" rel="stylesheet">
-
-<style>
-:root {
-  --bg: #5bb0ff;
-  --panel: #3d87e7;
-  --text: #050505;
-  --accent: #00ffb3;
-  --highlight: #000000;
-  --danger: #db0f97;
-}
-
-* {
-  box-sizing: border-box;
-}
-
-body {
-  margin: 0;
-  font-family: 'Press Start 2P', bold;
-  background-color: var(--bg);
-  color: var(--text);
-  font-size: 0.75rem;
-  line-height: 1.6;
-}
-
-/* CRT scanlines */
-body::after {
-  content: "";
-  position: fixed;
-  inset: 0;
-  pointer-events: none;
-  background: repeating-linear-gradient(
-    to bottom,
-    rgba(0,0,0,0.05),
-    rgba(0,0,0,0.05) 1px,
-    transparent 1px,
-    transparent 2px
-  );
-}
-
-/* Layout */
-.container {
-  max-width: 900px;
-  margin: 0 auto;
-  padding: 1rem;
-}
-
-/* Header / Nav */
-header {
-  text-align: center;
-  margin-bottom: 1rem;
-}
-
-nav ul {
-  list-style: none;
-  padding: 0;
-  margin: 0.5rem 0;
-}
-
-nav li {
-  display: inline-block;
-  margin: 0 0.3rem;
-}
-
-nav a {
-  color: var(--highlight);
-  text-decoration: none;
-  padding: 0.3rem 0.6rem;
-  border: 1px solid transparent;
-}
-
-nav a:hover {
-  border: 1px solid var(--highlight);
-  background-color: rgba(0,0,0,0.2);
-}
-
-/* Status bar */
-.status-bar {
-  text-align: center;
-  font-size: 0.6rem;
-  color: var(--highlight);
-  margin-bottom: 1rem;
-  animation: blink 1.5s steps(2) infinite;
-}
-
-@keyframes blink {
-  50% { opacity: 0; }
-}
-
-/* Panels */
-section {
-  background-color: var(--panel);
-  padding: 1rem;
-  margin-bottom: 1rem;
-  border: 2px solid rgba(0,0,0,0.3);
-}
-
-/* Headings */
-h1 {
-  font-size: 1.2rem;
-  color: var(--accent);
-  margin-top: 0;
-  text-shadow: 1px 1px 0 #000;
-}
-
-h2 {
-  font-size: 0.85rem;
-  margin: 0;
-}
-
-/* Projects */
-.project-list {
-  list-style: none;
-  padding: 0;
-  margin: 0;
-}
-
-.project-list li {
-  padding: 0.4rem 0;
-  border-bottom: 1px dashed rgba(255,255,255,0.3);
-}
-
-.project-list li:last-child {
-  border-bottom: none;
-}
-
-.project-title {
-  color: var(--highlight);
-}
-
-.project-desc {
-  display: block;
-  color: #ffd1f0;
-  font-size: 0.65rem;
-  margin-left: 1rem;
-}
-
-/* Links */
-a {
-  color: var(--highlight);
-}
-
-a:hover {
-  color: var(--accent);
-}
-
-/* Footer */
-footer {
-  text-align: center;
-  font-size: 0.6rem;
-  color: rgba(255,255,255,0.8);
-  margin-top: 1rem;
-}
-</style>
+<link rel="stylesheet" href="assets/css/PSone.css">
 </head>
 
 <body>
