--- a/music.html
+++ b/music.html
@@ -4,31 +4,7 @@
     <meta charset="UTF-8">
     <title>Music - JeevesGB</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <style>
-        body {
-            margin: 0;
-            font-family: Arial, Helvetica, sans-serif;
-            background-color: #111;
-            color: #fff;
-        }
-
-        .container {
-            max-width: 900px;
-            margin: 40px auto;
-            padding: 20px;
-        }
-
-        h1 {
-            text-align: center;
-            margin-bottom: 20px;
-        }
-
-        .player {
-            border-radius: 8px;
-            overflow: hidden;
-        }
-    </style>
+    <link rel="stylesheet" href="assets/css/PSone.css">
 </head>
 <body>
 
