--- a/webtools.html
+++ b/webtools.html
@@ -4,16 +4,8 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Web Tools — JeevesGB</title>
-<link rel="stylesheet" href="style.css">
-<style>
-/* Inline minimal styling if not using external CSS */
-body { font-family: Arial, sans-serif; background-color: #2d97fa; color: #020202; padding: 2rem; }
-h1 { color: #00ffb3; }
-ul { list-style: none; padding: 0; }
-li { margin: 0.5rem 0; }
-a { color: #0c0c0a; text-decoration: none; font-weight: bold; }
-a:hover { color: #00ffb3; }
-</style>
+<link rel="stylesheet" href="assets/css/PSone.css">
+
 </head>
 <body>
 
