--- a/index.html
+++ b/index.html
@@ -11,21 +11,6 @@
 </head>
 
 <body>
-
-<header>
-  <nav>
-    <ul>
-      <li><a href="#about">About</a></li>
-      <li><a href="#projects">Projects</a></li>
-      <li><a href="webtools.html">Web Tools</a></li>
-      <li><a href="music.html">Music</a></li>
-      <li><a href="#contact">Contact</a></li>
-    </ul>
-  </nav>
-</header>
-
-<div class="status-bar">Happy New Year!</div>
-
 <main class="container">
 
 <section id="about">
@@ -36,46 +21,15 @@
   </p>
 </section>
 
+
 <section id="projects">
-  <h1>My Projects</h1>
-  <ul class="project-list">
-    <li>
-      <span class="project-title"><a href="https://github.com/JeevesGB/pPainter" target="_blank">pPainter</a></span>
-      <span class="project-desc">Edit palettes of .TIM image files</span>
-    </li>
-    <li>
-      <span class="project-title"><a href="https://github.com/JeevesGB/img2pdf" target="_blank">img2pdf</a></span>
-      <span class="project-desc">Convert images to PDF</span>
-    </li>
-    <li>
-      <span class="project-title"><a href="https://github.com/JeevesGB/timview" target="_blank">TIMView</a></span>
-      <span class="project-desc">View and convert .TIM images</span>
-    </li>
-    <li>
-      <span class="project-title"><a href="https://github.com/JeevesGB/png2tga" target="_blank">PNG2TGA</a></span>
-      <span class="project-desc">Convert PNG images to TGA</span>
-    </li>
-    <li>
-      <span class="project-title"><a href="https://github.com/JeevesGB/TXT2CSV" target="_blank">TXT2CSV</a></span>
-      <span class="project-desc">Gran Turismo 2 .CSV tools</span>
-    </li>
-    <li>
-      <span class="project-title"><a href="https://github.com/JeevesGB/TXT2CSV-3" target="_blank">TXT2CSV3</a></span>
-      <span class="project-desc">Gran Turismo 3 .CSV tools</span>
-    </li>
-    <li>
-      <span class="project-title"><a href="https://github.com/JeevesGB/JEJ-FM" target="_blank">JEJ-FM</a></span>
-      <span class="project-desc">Simple Windows radio</span>
-    </li>
-    <li>
-      <span class="project-title"><a href="https://github.com/JeevesGB/GTDyno" target="_blank">GTDyno</a></span>
-      <span class="project-desc">Engine creator for GT2 / GT3</span>
-    </li>
-    <li>
-      <span class="project-title"><a href="https://github.com/JeevesGB/Click-The-Twingo" target="_blank">Click The Twingo</a></span>
-      <span class="project-desc">Python clicker game</span>
-    </li>
-  </ul>
+   <nav>
+    <ul>
+      <li><a href="#projects">Projects</a></li>
+      <li><a href="webtools.html">Web Tools</a></li>
+      <li><a href="music.html">Music</a></li>
+    </ul>
+  </nav>
 </section>
 
 <section id="contact">
@@ -87,7 +41,7 @@
 </section>
 
 <footer>
-  © 2025 JeevesGB — All Rights Reserved
+  © 2026 JeevesGB
 </footer>
 
 </main>
