--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
 </section>
 
 
-<section id="projects">
-   <nav>
-    <ul>
-      <li><a href="#projects">Projects</a></li>
-      <li><a href="webtools.html">Web Tools</a></li>
-      <li><a href="music.html">Music</a></li>
-    </ul>
-  </nav>
+<link><a href="projects.html">Projects</a></link>
+
+<link><a href="webtools.html">Web Tools</a></link>
+
+<link><a href="music.html">Music</a></link>
+
+
+
 </section>
 
 <section id="contact">
