--- a/index.html
+++ b/index.html
@@ -20,16 +20,13 @@
     This page is currently work in progress so changes will occur as I update and improve it.
   </p>
 </section>
-
-
-<link><a href="projects.html">Projects</a></link>
-
-<link><a href="webtools.html">Web Tools</a></link>
-
-<link><a href="music.html">Music</a></link>
-
-
-
+<section id="projects">
+  <h1></h1>
+<nav>
+  <a href="projects.html" class="btn primary">Projects</a>
+  <a href="webtools.html" class="btn primary">Web Tools</a>
+  <a href="music.html" class="btn primary">Music</a>
+</nav>
 </section>
 
 <section id="contact">
