--- a/index.html
+++ b/index.html
@@ -1,46 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>JeevesGB</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <p></p>
+    <p class="title"><strong>JeevesGB</strong></p>
 
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link rel="stylesheet" href="assets/css/PSone.css">
+  <link rel="stylesheet" href="assets/css/PSone.css">
 </head>
 
 <body>
-<main class="container">
 
-<section id="about">
-  <h1>About Me</h1>
-  <p>
-    My name is Jej, I am interested in coding and game modification. 
-    This page is currently work in progress so changes will occur as I update and improve it.
-  </p>
-</section>
-<section id="projects">
-  <h1></h1>
-<nav>
-  <a href="projects.html" class="btn primary">Projects</a>
-  <a href="webtools.html" class="btn primary">Web Tools</a>
-  <a href="music.html" class="btn primary">Music</a>
-</nav>
-</section>
+  <!-- HEADER / MAIN MENU -->
+  <div class="container">
 
-<section id="contact">
-  <h1>Contact</h1>
-  <p>
-    Email:
-    <a href="mailto:it.is.jej@gmail.com">it.is.jej@gmail.com</a>
-  </p>
-</section>
 
-<footer>
-  © 2026 JeevesGB
-</footer>
+    <nav class="field">
+      <a href="projects.html" class="btn primary">Projects</a>
+      <a href="webtools.html" class="btn primary">Web Tools</a>
+      <a href="music.html" class="btn primary">Music</a>
+    </nav>
+  </div>
 
-</main>
+  <!-- ABOUT -->
+  <div class="container">
+    <p class="title">About Me</p>
+
+    <p>
+      My name is Jej, I am interested in coding and game modification.
+      This page is currently work in progress so changes will occur as I update and improve it.
+    </p>
+  </div>
+
+  <!-- CONTACT -->
+  <div class="container">
+    <p class="title">Contact</p>
+
+    <p>
+      Email:
+      <a href="mailto:it.is.jej@gmail.com">it.is.jej@gmail.com</a>
+    </p>
+  </div>
+
+  <!-- FOOTER -->
+  <div class="container dark">
+    <p style="text-align:center;">
+      © 2026 JeevesGB
+    </p>
+  </div>
+
 </body>
 </html>
