--- a/webtools.html
+++ b/webtools.html
@@ -1,32 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Web Tools — JeevesGB</title>
-<link rel="stylesheet" href="assets/css/PSone.css">
-
+  <meta charset="UTF-8">
+  <title>Web Tools - JeevesGB</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="assets/css/PSone.css">
 </head>
+
 <body>
 
-<h1>Web Tools</h1>
-<p>Browser-based tools and utilities.</p>
+  <!-- HEADER / NAV -->
+  <div class="container">
+    <p></p>
+    <p class="title"><strong>Web Tools</strong></p>
 
-<h2>work in progress</h2>
+    <nav class="field">
+      <a href="index.html" class="btn primary">← Back to Home</a>
+    </nav>
+  </div>
 
-<ul>
-  <li><a href="tools/txt2csv.html">TXT → CSV Converter</a></li>
-</ul>
-<ul>
-  <li><a href="tools/png2tga.html">PNG → TGA Converter</a></li>
-</ul>
-<ul>
-  <li><a href="tools/png2pdf.html">PNG → PDF Converter</a></li>
-</ul>
-<p><a href="index.html">← Back to Home</a></p>
+  <!-- CONTENT -->
+  <div class="container">
+<p></p>
+    <p>
+      Browser-based tools and utilities.
+    </p>
 
-<footer>
-  © 2025 JeevesGB
-</footer>
+    <p>
+      <strong>Work in progress</strong>
+    </p>
+
+    <ul class="project-list">
+      <li>
+        <span class="project-title">
+          <a href="tools/txt2csv.html">TXT → CSV Converter</a>
+        </span>
+      </li>
+
+      <li>
+        <span class="project-title">
+          <a href="tools/png2tga.html">PNG → TGA Converter</a>
+        </span>
+      </li>
+
+      <li>
+        <span class="project-title">
+          <a href="tools/png2pdf.html">PNG → PDF Converter</a>
+        </span>
+      </li>
+    </ul>
+  </div>
+
+  <!-- FOOTER -->
+  <div class="container dark">
+    <p style="text-align:center;">
+      © 2025 JeevesGB
+    </p>
+  </div>
+
 </body>
 </html>
