--- a/music.html
+++ b/music.html
@@ -1,27 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Music - JeevesGB</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="assets/css/PSone.css">
+  <meta charset="UTF-8">
+  <title>Music - JeevesGB</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="assets/css/PSone.css">
 </head>
+
 <body>
-<h1>My Music</h1>
-<p><a href="index.html">← Go Back</a></p>
-<div class="music-list">
-<p></p>
-<div><iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/soundcloud%253Atracks%253A2238104477&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/jeevesbeats" title="JEJ" target="_blank" style="color: #cccccc; text-decoration: none;">JEJ</a> · <a href="https://soundcloud.com/jeevesbeats/jej-fallen" title="JEJ - Fallen" target="_blank" style="color: #cccccc; text-decoration: none;">JEJ - Fallen</a></div></div>
-<p></p>
-<div><iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/soundcloud%253Atracks%253A2227023290&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/jeevesbeats" title="JEJ" target="_blank" style="color: #cccccc; text-decoration: none;">JEJ</a> · <a href="https://soundcloud.com/jeevesbeats/innocence-bootleg" title="Innocence bootleg" target="_blank" style="color: #cccccc; text-decoration: none;">Innocence bootleg</a></div>
-<p></p> 
-<div><iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/soundcloud%253Atracks%253A2221918337&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/jeevesbeats" title="JEJ" target="_blank" style="color: #cccccc; text-decoration: none;">JEJ</a> · <a href="https://soundcloud.com/jeevesbeats/jej-let-love-die-ft-jaymuusixx" title="JEJ - Let Love Die (Ft Jaymuusixx)" target="_blank" style="color: #cccccc; text-decoration: none;">JEJ - Let Love Die (Ft Jaymuusixx)</a></div></div>
-<p></p>
-</div>
 
+  <!-- HEADER / NAV -->
+  <div class="container">
+    <p></p>
+    <p class="title"><strong>Music</strong></p>
 
-<footer>
-  © 2025 JeevesGB
-</footer>
+    <nav class="field">
+      <a href="index.html" class="btn primary">← Go Back</a>
+    </nav>
+  </div>
+
+  <!-- MUSIC LIST -->
+  <div class="container">
+
+    <div class="music-list">
+
+      <iframe
+        width="100%"
+        height="300"
+        scrolling="no"
+        frameborder="no"
+        allow="autoplay"
+        src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/soundcloud%253Atracks%253A2238104477&auto_play=false&visual=true">
+      </iframe>
+
+      <iframe
+        width="100%"
+        height="300"
+        scrolling="no"
+        frameborder="no"
+        allow="autoplay"
+        src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/soundcloud%253Atracks%253A2227023290&auto_play=false&visual=true">
+      </iframe>
+
+      <iframe
+        width="100%"
+        height="300"
+        scrolling="no"
+        frameborder="no"
+        allow="autoplay"
+        src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/soundcloud%253Atracks%253A2221918337&auto_play=false&visual=true">
+      </iframe>
+
+    </div>
+  </div>
+
+  <!-- FOOTER -->
+  <div class="container dark">
+    <p style="text-align:center;">
+      © 2025 JeevesGB
+    </p>
+  </div>
+
 </body>
 </html>
