--- a/index.html
+++ b/index.html
@@ -24,30 +24,26 @@
 
   <!-- ABOUT -->
   <div class="container">
-    <p class="title">About Me</p>
+    <p></p>
+    <p class="title"><strong>About Me</strong></p>
 
-    <p>
+    <i>
       My name is Jej, I am interested in coding and game modification.
       This page is currently work in progress so changes will occur as I update and improve it.
-    </p>
+    </i>
+
   </div>
 
   <!-- CONTACT -->
   <div class="container">
-    <p class="title">Contact</p>
+    <p></p>
+    <p class="title"><strong>Contact</strong></p>
 
-    <p>
+    <i>
       Email:
       <a href="mailto:it.is.jej@gmail.com">it.is.jej@gmail.com</a>
-    </p>
+    </i>
   </div>
-
-  <!-- FOOTER -->
-  <div class="container dark">
-    <p style="text-align:center;">
-      © 2026 JeevesGB
-    </p>
-  </div>
-
+  
 </body>
 </html>
