--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
 
 <body>
 
-  <!-- HEADER / MAIN MENU -->
   <div class="container">
 
 
@@ -22,7 +21,6 @@
     </nav>
   </div>
 
-  <!-- ABOUT -->
   <div class="container">
     <p></p>
     <p class="title"><strong>About Me</strong></p>
@@ -34,7 +32,6 @@
 
   </div>
 
-  <!-- CONTACT -->
   <div class="container">
     <p></p>
     <p class="title"><strong>Contact</strong></p>
@@ -44,6 +41,9 @@
       <a href="mailto:it.is.jej@gmail.com">it.is.jej@gmail.com</a>
     </i>
   </div>
-  
+<p></p>
+<foot>  
+    © 2026 JeevesGB 
+</foot>
 </body>
 </html>
