add page for maps

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <nav class="field">
       <a href="projects.html" class="btn primary">Projects</a>
       <a href="webtools.html" class="btn primary">Web Tools</a>
+      <a href="far-cry-2-maps/fc2index.html" class="btn primary">Far Cry 2 Multiplayer Maps</a>
       <a href="music.html" class="btn primary">Music</a>
     </nav>
   </div>
