added town page

--- a/far-cry-2-maps/fc2index.html
+++ b/far-cry-2-maps/fc2index.html
@@ -33,19 +33,19 @@
     <ul class="project-list">
       <li>
         <span class="project-title">
-          <a href="tools/txt2csv.html">™™™™</a>
+          <a href="far-cry-2-maps/town.html">Town</a>
         </span>
       </li>
-
+      <p> </p>
       <li>
         <span class="project-title">
-          <a href="tools/png2tga.html">™™™™</a>
+          <a href="far-cry-2-maps/fc2index.html">TODO </a>
         </span>
       </li>
-
+      <p> </p>
       <li>
         <span class="project-title">
-          <a href="tools/png2pdf.html">™™™™</a>
+          <a href="far-cry-2-maps/fc2index.html">TODO</a>
         </span>
       </li>
     </ul>
