--- a/far-cry-2-maps/fc2index.html
+++ b/far-cry-2-maps/fc2index.html
@@ -33,7 +33,7 @@
     <ul class="project-list">
       <li>
         <span class="project-title">
-          <a href="far-cry-2-maps/town.html">Town</a>
+          <a href="town.html">Town</a>
         </span>
       </li>
       <p> </p>
