--- a/far-cry-2-maps/fc2index.html
+++ b/far-cry-2-maps/fc2index.html
@@ -27,29 +27,36 @@
     </p>
 
     <p>
-      <strong>TODO: Add pages, current links go to webtools for now</strong>
+      <strong>TODO: Add pages, some links go to webtools for now</strong>
     </p>
 
-    <ul class="project-list">
-      <li>
+<ul class="project-list">
+    <!-- Same folder -->
+    <li>
         <span class="project-title">
-          <a href="town.html">Town</a>
+            <a href="town.html">Town</a>
         </span>
-      </li>
-      <p> </p>
-      <li>
+    </li>
+    <!-- Root-level pages -->
+    <li>
         <span class="project-title">
-          <a href="far-cry-2-maps/fc2index.html">TODO </a>
+            <a href="../projects.html">Projects</a>
         </span>
-      </li>
-      <p> </p>
-      <li>
+    </li>
+
+    <li>
         <span class="project-title">
-          <a href="far-cry-2-maps/fc2index.html">TODO</a>
+            <a href="../webtools.html">Web Tools</a>
         </span>
-      </li>
-    </ul>
-  </div>
+    </li>
+
+    <li>
+        <span class="project-title">
+            <a href="../music.html">Music</a>
+        </span>
+    </li>
+</ul>
+
 
   <div class="container">
     <p></p>
