--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
       <a href="mailto:it.is.jej@gmail.com">it.is.jej@gmail.com</a>
     </i>
   </div>
+
+  <iframe src="https://discord.com/widget?id=1455944329750253754&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
+
 <p></p>
 <foot>  
     © 2026 JeevesGB 
