--- a/index.html
+++ b/index.html
@@ -33,6 +33,19 @@
 
   </div>
 
+<section class="gt2c-feature">
+  <a href="gt2c.html" class="gt2c-button">
+    <img
+      src="gt2c/images/discordgt2clogo copy.png"
+    />
+  </a>
+
+  <p class="gt2c-caption">
+    Gran Turismo 2 Concept Mod
+  </p>
+</section>
+
+
   <div class="container">
     <p></p>
     <p class="title"><strong>Contact</strong></p>
