--- a/webtools.html
+++ b/webtools.html
@@ -31,7 +31,7 @@
     <ul class="project-list">
       <li>
         <span class="project-title">
-          <a href="txt2csv.html">TXT → CSV Converter</a>
+          <a href="tools/txt2csv.html">TXT → CSV Converter</a>
         </span>
       </li>
 
