--- a/far-cry-2-maps/fc2index.html
+++ b/far-cry-2-maps/fc2index.html
@@ -6,7 +6,7 @@
     <p></p>
     <p class="title"><strong>Far Cry 2 Multiplayer Maps</strong></p>
 
-    <link rel="stylesheet" href="../assets/css/PSone.css">
+    <link rel="stylesheet" href="../assets/css/gt2.css">
 </head>
 <body>
 
