--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <p></p>
     <p class="title"><strong>JeevesGB</strong></p>
 
-  <link rel="stylesheet" href="assets/css/PSone.css">
+  <link rel="stylesheet" href="assets/css/gt2.css">
 </head>
 
 <body>
