--- a/gt2c/gt2c.html
+++ b/gt2c/gt2c.html
@@ -37,6 +37,46 @@
       GT2-C-menu-test-unfinished
     </a>
   </main>
+  <section class="how-to-patch">
+  <h2>How to Patch</h2>
+
+  <p><strong>Note:</strong> You <strong>must</strong> use
+     <strong>Gran Turismo 2 Version 1.2 (NTSC)</strong>.
+     Other versions will not work.</p>
+
+  <ol>
+    <li>
+      Download an <strong>xDelta patcher</strong>
+      (such as xdeltaUI or xdelta3).
+    </li>
+
+    <li>
+      Run the patcher and select your
+      <strong>Gran Turismo 2 v1.2 NTSC</strong> disc image
+      as the source file.
+    </li>
+
+    <li>
+      Select the provided <strong>.xdelta</strong> patch file.
+    </li>
+
+    <li>
+      Choose an output location and filename for the patched game.
+    </li>
+
+    <li>
+      Start the patching process. This may take a few moments.
+    </li>
+
+    <li>
+      Once complete, a new patched copy of the game will be created.
+    </li>
+
+    <li>
+      Load the patched game. If successful, the mod will now be applied.
+    </li>
+  </ol>
+</section>
 
 
   <footer>
