--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   </div>
 
 <section class="gt2c-feature">
-  <a href="gt2c.html" class="gt2c-button">
+  <a href="gt2c/gt2c.html" class="gt2c-button">
     <img
       src="gt2c/images/discordgt2clogo copy.png"
     />
