--- a/index.html
+++ b/index.html
@@ -30,20 +30,22 @@
       My name is Jej, I am interested in coding and game modification.
       This page is currently work in progress so changes will occur as I update and improve it.
     </i>
+    
+    <p></p>
+    <section class="gt2c-feature">
+    <a href="gt2c/gt2c.html" class="gt2c-button">
+        <img
+          src="gt2c/images/discordgt2clogo copy.png"
+        />
+      </a>
+    <p class="gt2c-caption">
+      Gran Turismo 2 Concept - A fan project to redesign Gran Turismo 2's menus and add new content.
+    </p>
+  </section>
 
   </div>
 
-<section class="gt2c-feature">
-  <a href="gt2c/gt2c.html" class="gt2c-button">
-    <img
-      src="gt2c/images/discordgt2clogo copy.png"
-    />
-  </a>
 
-  <p class="gt2c-caption">
-    Gran Turismo 2 Concept Mod
-  </p>
-</section>
 
 
   <div class="container">
