--- a/gt2c/gt2c.html
+++ b/gt2c/gt2c.html
@@ -30,7 +30,7 @@
 
     <p>Download the latest patch below:</p>
     <a
-      href="patches/GT2-C-menu-test-unfinished.xdelta"
+      href="https://github.com/JeevesGB/jeevesgb.github.io/releases/download/gt2c-indevmenutestt1312026/gt2c-indevmenutestt1312026.7z"
       download
       class="download-link"
     >
