--- a/gt2c/gt2c.html
+++ b/gt2c/gt2c.html
@@ -53,7 +53,7 @@
     <li>
       Run the patcher and select your
       <strong>Gran Turismo 2 v1.2 NTSC</strong> disc image
-      as the source file.
+      as the source file. (Make sure to make a backup copy first!)
     </li>
 
     <li>
@@ -61,7 +61,7 @@
     </li>
 
     <li>
-      Choose an output location and filename for the patched game.
+      Choose an output location and filename for the patched game. 
     </li>
 
     <li>
