--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <p></p>
     <p class="title"><strong>JeevesGB</strong></p>
 
-  <link rel="stylesheet" href="assets/css/gt2.css">
+  <link rel="stylesheet" href="assets/css/granturismo.css">
 </head>
 
 <body>
@@ -36,6 +36,7 @@
     <a href="gt2c/gt2c.html" class="gt2c-button">
         <img
           src="gt2c/images/discordgt2clogo copy.png"
+          align="center"
         />
       </a>
     <p class="gt2c-caption">
