--- a/far-cry-2-maps/fc2index.html
+++ b/far-cry-2-maps/fc2index.html
@@ -21,22 +21,16 @@
   </div>
 
   <div class="container">
-<p></p>
-    <p>
-      Browser-based tools and utilities.
-    </p>
-
-    <p>
-      <strong>TODO: Add pages, some links go to webtools for now</strong>
-    </p>
-
-<ul class="project-list">
+    <p></p>
+    <p class="title"><strong>Maps</strong></p>
+  <ul class="project-list">
     <li>
         <span class="project-title">
             <a href="town.html">Town</a>
         </span>
     </li>
-</ul>
+  </ul>
+  </div>
 
 
   <div class="container">
