--- a/far-cry-2-maps/town.html
+++ b/far-cry-2-maps/town.html
@@ -6,7 +6,7 @@
     <p></p>
     <p class="title"><strong>Town</strong></p>
 
-    <link rel="stylesheet" href="../assets/css/PSone.css">
+    <link rel="stylesheet" href="../assets/css/granturismo.css">
 </head>
 
   <div class="container">
