--- a/index.html
+++ b/index.html
@@ -43,9 +43,23 @@
       Gran Turismo 2 Concept - A fan project to redesign Gran Turismo 2's menus and add new content.
     </p>
   </section>
-      <iframe src="https://discord.com/widget?id=1455944329750253754&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
+      
+    <section class="gt4p-feature">
+    <a href="gt4p/gt4p.html" class="gt4p-button">
+        <img
+          src="gt4p/images/GT4_Poundland.png"
+          align="center"
+        />
+      </a>
+    <p class="gt4p-caption">
+      Gran Turismo 4 Poundland Edition - A fan project that makes all cars cost 1CR and unlocks special colors.
+    </p>
+  </section>
+
+  <iframe src="https://discord.com/widget?id=1455944329750253754&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
 
   </div>
+
 
 
 
