--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
       <a href="webtools.html" class="btn primary">Web Tools</a>
       <a href="far-cry-2-maps/fc2index.html" class="btn primary">Far Cry 2 Multiplayer Maps</a>
       <a href="music.html" class="btn primary">Music</a>
+      <a href="https://jeevesgb.itch.io/" class="btn primary">Itch.io</a>
     </nav>
   </div>
 
