--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <p></p>
-    <p class="title"><strong>JeevesGB</strong></p>
+    <p class="title"><strong>Jeeves</strong></p>
 
   <link rel="stylesheet" href="assets/css/granturismo.css">
 </head>
@@ -49,7 +49,8 @@
     <a href="gt4p/gt4p.html" class="gt4p-button">
         <img
           src="gt4p/images/GT4_Poundland.png"
-          align="center"
+          align="center"  
+          
         />
       </a>
     <p class="gt4p-caption">
