--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
         <img
           src="gt4p/images/GT4_Poundland.png"
           align="center"  
-          
+          height="400"
+          width=""
         />
       </a>
     <p class="gt4p-caption">
