--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <p class="title"><strong>About Me</strong></p>
 
     <i>
-      My name is Jej, I am interested in coding and game modification.
+      My name is Jeeves, I am interested in coding and game modification. 
       This page is currently work in progress so changes will occur as I update and improve it.
     </i>
     
