--- a/far-cry-2-maps/fc2index.html
+++ b/far-cry-2-maps/fc2index.html
@@ -22,14 +22,21 @@
 
   <div class="container">
     <p></p>
-    <p class="title"><strong>Maps</strong></p>
-  <ul class="project-list">
-    <li>
-        <span class="project-title">
-            <a href="town.html">Town</a>
-        </span>
-    </li>
-  </ul>
+    <p class="title"><strong>Jungle town</strong></p>
+  <section class="maps-feature">
+    <a href="town.html" class="maps-button">
+        <img
+          src="img\town\town1.png"
+          align="center"
+          height="500"
+          width=""
+        />
+      </a>
+    <p class="maps-caption">
+      Large town situated deep within the jungle, Features detailed map and alternate pathways.
+    </p>
+    <p>Suitable for all Gamemodes.</p>
+  </section>
   </div>
 
 
