--- a/far-cry-2-maps/town.html
+++ b/far-cry-2-maps/town.html
@@ -25,12 +25,15 @@
     <i> 
         Map Name: Town
     </i>
+    <p></p>
     <i>
         Players: 2-16
     </i>
+    <p></p>
     <i>
         Size: Large
     </i>
+    <p></p>
     <i>
         Environment: Jungle
 
@@ -42,15 +45,48 @@
     <p></p>
 
     <i>
-      Town is a map set deep within the Jungle 
+      Large town situated deep within the jungle, Features detailed map and alternate pathways.
+      <p> </p>
+      Suitable for all Gamemodes. 
     </i>
 
     </div>
 
     <div class="container">
-    <img src="far-cry-2-maps/img/town/town1.jpg" alt="Town map overview">
-    <img src="far-cry-2-maps/img/town/town2.jpg" alt="Town jungle area">
-    <img src="far-cry-2-maps/img/town/town3.jpg" alt="Town village">
-    <img src="far-cry-2-maps/img/town/town4.jpg" alt="Town village">
+      <a
+        href="https://github.com/JeevesGB/jeevesgb.github.io/releases/download/j-town/j-town-day.fc2map"
+        download
+        class="download-link"
+      >
+        Download Map
+      </a>
+    </div>
+
+
+    <div class="container">
+    <img
+          src="img\town\town1.png"
+          align="center"
+          height="400"
+          width=""
+        />
+    <img
+          src="img\town\town2.png"
+          align="center"
+          height="400"
+          width=""
+        />
+    <img
+          src="img\town\town3.png"
+          align="center"
+          height="400"
+          width=""
+        />
+      <img
+          src="img\town\town4.png"
+          align="center"
+          height="400"
+          width=""
+        />
     </div>
 
