--- a/index.html
+++ b/index.html
@@ -21,7 +21,12 @@
       <a href="pages/music.html" class="btn primary">Music</a>
       <a href="https://jeevesgb.itch.io/" class="btn primary">Itch.io</a>
     </nav>
+    <p></p>
+    <nav class="field">
+      <a href="pages/homoligation.html" class="btn primary">Homoligation Documents</a>
+    </nav>
   </div>
+  
 
   <div class="container">
     <p></p>
