--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
     
     <p></p>
     <section class="gt2c-feature">
-    <a href="gt2c/gt2c.html" class="gt2c-button">
+    <a href="pages/gt2c/gt2c.html" class="gt2c-button">
         <img
-          src="gt2c/images/discordgt2clogo copy.png"
+          src="pages/gt2c/images/discordgt2clogo copy.png"
           align="center"
         />
       </a>
@@ -51,9 +51,9 @@
   </section>
       
     <section class="gt4p-feature">
-    <a href="gt4p/gt4p.html" class="gt4p-button">
+    <a href="pages/gt4p/gt4p.html" class="gt4p-button">
         <img
-          src="gt4p/images/GT4_Poundland.png"
+          src="pages/gt4p/images/GT4_Poundland.png"
           align="center"  
           height="400"
           width=""
